<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/register_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50sp"
            android:ems="15"
            android:hint="@string/text_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:id="@+id/register_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/register_yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="80sp"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="login"
                android:text="@string/btn_login"
                android:textColor="@android:color/holo_blue_bright" />

            <Button
                android:id="@+id/register_no_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="register"
                android:text="@string/btn_register"
                android:textColor="@android:color/holo_blue_bright" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>