<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:orientation="vertical" 
    android:baselineAligned="false">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="4"
        android:orientation="vertical" >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_course_description"
            android:textColor="@android:color/holo_blue_bright"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textview_course_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="15dp"
        android:background="#33CCCCCC"/>
    
 	<GridLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:useDefaultMargins="true"
    	android:alignmentMode="alignMargins"
    	android:columnOrderPreserved="false"
    	android:columnCount="2" 
    	android:layout_margin="15dp"
    	android:layout_weight="1" >

        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:text="@string/text_course_department"
            android:textColor="@android:color/holo_blue_bright"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/textview_course_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"    
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"            
            android:text="@string/text_course_instructor"
            android:textColor="@android:color/holo_blue_bright"
            android:textAppearance="?android:attr/textAppearanceLarge" />
		<TextView
            android:id="@+id/textview_course_instructor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"  
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
		
		<TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"            
            android:text="@string/text_course_unit"
            android:textColor="@android:color/holo_blue_bright"
            android:textAppearance="?android:attr/textAppearanceLarge" />
		<TextView
            android:id="@+id/textview_course_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_gravity="center"  
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
		
		<TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"            
            android:text="@string/text_course_capacity"
            android:textColor="@android:color/holo_blue_bright"
            android:textAppearance="?android:attr/textAppearanceLarge" />
		<TextView
            android:id="@+id/textview_course_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"              
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
		
		<TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"            
            android:text="@string/text_course_url"
            android:textColor="@android:color/holo_blue_bright"
            android:textAppearance="?android:attr/textAppearanceLarge" />
		<TextView
		    android:id="@+id/textview_course_url"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_margin="10dp"
		    android:autoLink="web"
		    android:textAppearance="?android:attr/textAppearanceLarge" />

	</GridLayout>

</LinearLayout>
