<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20sp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/img_avatar"
            android:scaleType="fitXY"
            android:src="@drawable/octocat" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20sp"
            android:layout_weight="0.7"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/main_basic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="10sp"
                android:gravity="center"
                android:text="@string/text_main_basic"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/text_department" />

                <TextView
                    android:id="@+id/main_department"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/text_department" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/text_major" />

                <TextView
                    android:id="@+id/main_major"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/text_major" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30sp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/text_degree" />

                <TextView
                    android:id="@+id/main_degree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/text_degree" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:text="@string/text_completion"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/completion_percentage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:layout_marginLeft="10sp"
                android:gravity="center"
                android:text="@string/text_completion_num"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ProgressBar
                android:id="@+id/progress_horizontal"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:max="100" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10sp"
        android:layout_weight="0.6" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_main_core"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_blue_bright" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="20sp"
                android:background="@android:color/holo_blue_dark" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TableLayout
                    android:id="@+id/core_unfinished"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >
                </TableLayout>

                <TableLayout
                    android:id="@+id/core_finished"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >
                </TableLayout>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_main_restricted"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_blue_bright" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="20sp"
                android:background="@android:color/holo_blue_dark" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TableLayout
                    android:id="@+id/restricted_unfinished"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >
                </TableLayout>

                <TableLayout
                    android:id="@+id/restricted_finished"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >
                </TableLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/curriculum_option"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_main_option"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_blue_bright" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="20sp"
                android:background="@android:color/holo_blue_dark" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TableLayout
                    android:id="@+id/option_finished"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" >
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>